# conptywrapper

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
build-scripts/buildWheel/: CMakeLists.txt  MANIFEST.in  README.md  __init__.py  buildwheel.bat  setup.py.in
cmake/: macros.cmake  toolchain.cmake
source/example/: CMakeLists.txt
source/example/include/: example.hpp
source/example/src/: example.cpp
source/hostcon/: CMakeLists.txt
source/hostcon/src/: hostcon.cpp
source/pseudoconsole/: CMakeLists.txt
source/pseudoconsole/src/: pseudoconsole.cpp
